2002-07-20  Rob Browning  <rlb@defaultvalue.org>

	* readline.scm: dynamic-link libguilereadline-v-MAJOR now.

	* configure.in (LIBGUILEREADLINE_MAJOR): replaces
	LIBGUILEREADLINE_LTHACK.

	* Makefile.am: just name dlsymable libs with their major version
	number, not the whole version.  That should be sufficient for now.

	* LIBGUILEREADLINE-VERSION: adjust versions and just name
	dlsymable libs with their major version number, not the whole
	version.  That should be sufficient for now.

2002-04-30  Marius Vollmer  <marius.vollmer@uni-dortmund.de>

	* autogen.sh: Invoke plain aclocal instead of guile-aclocal.sh.
	We don't need the Guile m4 macros and the previous invocation of
	guile-aclocal.sh created the aclocal.m4 file in the wrong
	directory (see change from 2002-04-26).

2002-04-26  Marius Vollmer  <mvo@zagadka.ping.de>

	* autogen.sh: Change to parent dir before invoking
	guile-aclocal.sh.

2002-04-12  Rob Browning  <rlb@defaultvalue.org>

	* readline.scm: fix typo...

2002-04-09  Rob Browning  <rlb@defaultvalue.org>

	* readline.scm: hack around dynamic-link problems by
	using painfully explicit lib names.

	* configure.in: add documentation for AC_DEFINEs and add
	LIBGUILEREADLINE_LTHACK.

	* Makefile.am: hack around dynamic-link problems by
	using painfully explicit lib names.

	* LIBGUILEREADLINE-VERSION: hack around dynamic-link problems by
	using painfully explicit lib names.
	(LIBGUILEREADLINE_LTHACK): new var.

	* .cvsignore: add *.c.clean.c.

2002-04-08  Marius Vollmer  <mvo@zagadka.ping.de>

	* Makefile.am (dist-hook): Make sure $(distdir)/Makefile.in is
	writable before modifying it.

2002-03-20  Marius Vollmer  <mvo@zagadka.ping.de>

	* Makefile.am (.c.x): Pass "-o $@" to guile-snarf.

2002-03-13  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* Makefile.am (snarfcppopts): New var.
	(.c.x): Use $(snarfcppopts). Rework guile-snarf usage.

2002-03-04  Rob Browning  <rlb@defaultvalue.org>

	* LIBGUILEREADLINE-VERSION: adjust AGE to leave some headroom.
